--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "sqlgate-resource",
   "version": "0.1.0",
-  "homepage": "/sqlgate-resources/",
   "dependencies": {
     "csvtojson": "^2.0.3",
     "react": "^16.3.2",
@@ -43,7 +42,7 @@
   "scripts": {
     "start": "react-app-rewired start --scripts-version react-scripts-ts",
     "build":
-      "react-app-rewired build --scripts-version react-scripts-ts && rm -rf ./docs && mv build ./docs",
+      "react-app-rewired build --scripts-version react-scripts-ts && rm -rf ./docs && mv build ./docs && cp ./src/CNAME ./docs/CNAME",
     "test":
       "react-app-rewired test --scripts-version react-scripts-ts --env=jsdom",
     "tslint-check": "tslint-config-prettier-check ./tslint.json"
